Created driver crud, and userSeason entities

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -8,6 +8,9 @@
     padding-bottom: 30px!important;
     color: white!important;
 }
+.display-inline {
+    display: inline-block!important;
+}
 
 .f1-car-picture {
     max-width: 90px;
