--- a/templates/driver/_delete_form.html.twig
+++ b/templates/driver/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('driver_delete', {'id': driver.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" class="display-inline" action="{{ path('driver_delete', {'id': driver.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ driver.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-danger">Delete</button>
 </form>
