--- a/templates/driver/show.html.twig
+++ b/templates/driver/show.html.twig
@@ -3,32 +3,42 @@
 {% block title %}Driver{% endblock %}
 
 {% block body %}
-    <h1>Driver</h1>
+    <div class="container-fluid mt-5">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                    <h1>Driver</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ driver.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ driver.name }}</td>
-            </tr>
-            <tr>
-                <th>Surname</th>
-                <td>{{ driver.surname }}</td>
-            </tr>
-            <tr>
-                <th>Car_id</th>
-                <td>{{ driver.carId }}</td>
-            </tr>
-        </tbody>
-    </table>
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <th>Id</th>
+                                <td>{{ driver.id }}</td>
+                            </tr>
+                            <tr>
+                                <th>Name</th>
+                                <td>{{ driver.name }}</td>
+                            </tr>
+                            <tr>
+                                <th>Surname</th>
+                                <td>{{ driver.surname }}</td>
+                            </tr>
+                            <tr>
+                                <th>Car_id</th>
+                                <td>{{ driver.carId }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
 
-    <a href="{{ path('driver_index') }}">back to list</a>
+                    <a class="btn btn-outline-info" href="{{ path('driver_index') }}">back to list</a>
 
-    <a href="{{ path('driver_edit', {'id': driver.id}) }}">edit</a>
+                    <a class="btn btn-outline-success" href="{{ path('driver_edit', {'id': driver.id}) }}">edit</a>
 
-    {{ include('driver/_delete_form.html.twig') }}
+                    {{ include('driver/_delete_form.html.twig') }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
