--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,6 @@
         <title>{% block title %}F1 Simulator{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <script src="https://kit.fontawesome.com/0012002a90.js" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
         {% endblock %}
@@ -20,9 +19,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 
-                
-                <ul class="navbar-nav  my-2 my-lg-0">
+                <ul class="navbar-nav my-2 my-lg-0">
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <li class="nav-item"><a class="nav-link text-white" href="{{ path('multiplayer_index') }}">Multiplayer</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="">Hello:  {{ app.user.username }} </a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="{{ path('app_logout') }}">Logout</a></li>
                     {% else %}
@@ -45,6 +44,13 @@
                 {% if app.session.flashBag.has('error') %}
                     {% for msg in app.session.flashBag.get('error') %}
                         <div class="alert alert-danger mt-3">
+                            {{ msg }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+                {% if app.session.flashBag.has('warning') %}
+                    {% for msg in app.session.flashBag.get('warning') %}
+                        <div class="alert alert-warning mt-3">
                             {{ msg }}
                         </div>
                     {% endfor %}
