--- a/templates/league_results/_qualifications_classification.html.twig
+++ b/templates/league_results/_qualifications_classification.html.twig
@@ -11,11 +11,11 @@
             </thead>
             <tbody>
                 {% for result in classification %}
-                    <tr class={{ result.driver.isUser == true ? 'highlight-driver' : ''}}>
+                    <tr>
                         <td>{{ result.position }}</td>
-                        <td>{{ result.driver.name }} {{ result.driver.surname }}</td>
-                        <td>{{ result.driver.team.name }}</td>
-                        <td><img class="f1-car-picture" src="/assets/cars/{{ result.driver.team.picture }}"/></td>
+                        <td>{{ result.player.user.username }}</td>
+                        <td>{{ result.player.driver.team.name }}</td>
+                        <td><img class="f1-car-picture" src="/assets/cars/{{ result.player.driver.team.picture }}"/></td>
                     </tr>
                 {% endfor %}
             </tbody>
