--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
             <script src="https://kit.fontawesome.com/0012002a90.js" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
         {% endblock %}
+        <meta name="Description" content="Simulate your f1 season as one of the drivers against computer, or compete against players.">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg">
@@ -61,12 +62,7 @@
         {% block body %}{% endblock %}
 
         {% block javascripts %}
-            <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-            <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-            <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        
         {% endblock %}
     </body>
 </html>
