--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,12 +20,12 @@
 
                     <div class="form-group">
                         <label for="inputUsername">Użytkownik</label>
-                        <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
+                        <input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="form-control" required autofocus>
                     </div>
 
                     <div class="form-group">
                         <label for="inputPassword">Hasło</label>
-                        <input type="password" name="password" id="inputPassword" class="form-control" required>
+                        <input type="password" name="_password" id="inputPassword" class="form-control" required>
                     </div>
 
                     <input type="hidden" name="_csrf_token"
