Fix medal icons

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -44,15 +44,15 @@
                             <div class="driver-medals mt-2">
                                 <div class="row">
                                     <div class="col gold-medal mb-1">
-                                        <i class="fas fa-medal fa-3x"></i><br>
+                                        <i class="fa-solid fa-medal fa-3x"></i><br>
                                         <span>{{ driverPodiums[1] }}</span>
                                     </div>
                                     <div class="col silver-medal mb-1">
-                                        <i class="fas fa-medal fa-3x"></i><br>
+                                        <i class="fa-solid fa-medal fa-3x"></i><br>
                                         <span>{{ driverPodiums[2] }}</span>
                                     </div>
                                     <div class="col bronze-medal mb-1">
-                                        <i class="fas fa-medal fa-3x"></i><br>
+                                        <i class="fa-solid fa-medal fa-3x"></i><br>
                                         <span>{{ driverPodiums[3] }}</span>
                                     </div>
                                 </div>
