--- a/templates/league/show_league.html.twig
+++ b/templates/league/show_league.html.twig
@@ -25,15 +25,15 @@
                         <div class="driver-medals mt-2">
                             <div class="row">
                                 <div class="col gold-medal mb-1">
-                                    <i class="fas fa-medal fa-3x"></i><br>
+                                    <i class="fa-solid fa-medal fa-3x"></i><br>
                                         <span>{{ player.podiums[1] }}</span>
                                 </div>
                                 <div class="col silver-medal mb-1">
-                                    <i class="fas fa-medal fa-3x"></i><br>
+                                    <i class="fa-solid fa-medal fa-3x"></i><br>
                                         <span>{{ player.podiums[2] }}</span>
                                 </div>
                                 <div class="col bronze-medal mb-1">
-                                    <i class="fas fa-medal fa-3x"></i><br>
+                                    <i class="fa-solid fa-medal fa-3x"></i><br>
                                     <span>{{ player.podiums[3] }}</span>
                                 </div>
                             </div>
